tests/ui/asm/global-asm-sym-generic-param.stderr
error: can't use type parameters from outer item
  --> $DIR/global-asm-sym-generic-param.rs:13:28
   |
LL | fn fun_ty<T: Trait>() {
   |           - type parameter from outer item
LL |     global_asm!("{}", sym <T>::pure);
   |     -----------------------^-------- use of type parameter from inner item
   |
   = note: `global_asm!` is lifted to the top level and cannot depend on type parameters from an enclosing item

error: can't use const parameters from outer item
  --> $DIR/global-asm-sym-generic-param.rs:26:54
   |
LL | fn fun_const<const N: usize>() {
   |              -------------- const parameter from outer item
LL |     global_asm!("{}", sym <() as TraitWithConstParam<N>>::pure);
   |     -------------------------------------------------^--------- use of const parameter from inner item
   |
   = note: `global_asm!` is lifted to the top level and cannot depend on const parameters from an enclosing item

error: aborting due to 2 previous errors

